--- a/app/investments/investments.html
+++ b/app/investments/investments.html
@@ -61,6 +61,15 @@
       </tr>
       </tbody>
     </table>
+  </div>
+</div>
 
+<div class = "row">
+  <div class="col-xs-offset-1 col-xs-10 img-rounded">
+    <h5>This is an app I have created in my spare time to learn how to develop and deploy MEAN stack web applications.
+      It works by accessing stock data on Yahoo finance so the following link might be useful to help you pick stocks for you portfolio:
+      <a href="https://finance.yahoo.com/">Yahoo Finance</a>
+      Some examples include GOOG (Google),  AAPL(Apple) , GE(General Electric) or IOO (Ishares 100 ETF). Happy "investing"!
+    </h5>
   </div>
 </div>
